[INIT] - First Commit

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <h3 id="today-forecast-temp"> </h3>
               </div>
               <button type="button" class="btn btn-lg btn-block btn-primary button-load-forecast" onclick='start()'>
-                Quel temps fait'il aujourd'hui ?
+                Quel temps fait-il aujourd'hui ?
               </button>
             </div>
           </div>
