--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
                 <div id="icon-weather-container" ></div>
                 <h3 id="today-forecast-temp"> </h3>
               </div>
-              <button type="button" class="btn btn-lg btn-block btn-primary button-load-forecast" onclick='start()'>
+              <p class="btn btn-lg btn-block btn-primary button-load-forecast" onload='start()'>
                 Quel temps fait-il aujourd'hui ?
-              </button>
+              </p>
             </div>
           </div>
         </div>
